<resources>
    <string name="app_name">DokuGo</string>
    <string name="icon">icon</string>
    <string name="welcome">Welcome to DokuGo</string>

    <!--Signin & Login Page-->
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password?</string>
    <string name="google_icon">google</string>
    <string name="facebook_icon">facebook</string>
    <string name="apple_icon">apple</string>
    <string name="or_login_with">or login with</string>
    <string name="donthaveaccount">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="otp_code_verification">OTP Code Verification</string>
    <string name="check_your_email_inbox">Check Your Email Inbox!</string>
    <string name="continue_toreset">Continue</string>
    <string name="new_password">New password</string>
    <string name="set_new_password">Set new password</string>

    <!--UI-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="predict">Predict</string>
    <string name="dashboard">Dashboard</string>

    <!--Settings-->
    <string name="profile">Profile</string>
    <string name="profile_pic">Profile Avatar</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_email">Change Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="Logout">Logout</string>
    <string name="change_photo">Change Photo</string>

    <!--EditProfile-->

    <string name="tv_edit_profile">Edit Profile</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>

    <!--EditAvatar-->
    <string name="choose">Choose Avatar</string>
    <string name="avatar1">https://storage.googleapis.com/dokugo-storage/avatar1.png</string>
    <string name="avatar2">https://storage.googleapis.com/dokugo-storage/avatar2.png</string>
    <string name="avatar3">https://storage.googleapis.com/dokugo-storage/avatar3.png</string>

    <!--Income & Expense-->
    <string name="tv_income">Add New Income</string>
    <string name="tv_expense">Add New Expense</string>
    <string name="date_hint">Date</string>
    <string name="amount_hint">Amount</string>
    <string name="note_hint">Notes</string>
    <string name="save">Save</string>
    <string name="add_new_expense">Add new Expense</string>
    <string name="add_new_income">Add new income</string>


    <!--Kategory Uang-->
    <string-array name="categories">
        <item>Kategori 1</item>
        <item>Kategori 2</item>
        <item>Kategori 3</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_Setomgs">Settings</string>
    <string name="edit_account_icon" />
    <string name="change_email_icon" />
    <string name="delete_account_icon" />
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="Money_manager">Money Manager</string>
    <string name="settings">Settings</string>
    <string name="budget_manager">Budget Manager</string>
    <string name="money_history">Money History</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="tv_time">by you</string>
    <string name="currency">currency</string>
    <string name="date_all">All</string>
    <string name="date_1y">1Y</string>
    <string name="date__1m">1M</string>
    <string name="date__1w">1W</string>

    <string name="expanse_prediction">Expanse Prediction</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="all">All</string>

    <string name="detail_income">Detail Income</string>
    <string name="salary">Salary</string>
    <string name="others">Others</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="keterangan">Keterangan</string>
    <string name="money">Money</string>

    <string name="detail_transaction">Detail Transaction</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>


    <!-- Pop Up Message-->
    <string name="change_message">Do you want to log out?</string>
    <string name="dialog_description">You will be redirected to login</string>
    <string name="delete_message">Do you want to delete this account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available">This Feature is gonna be Available Soon</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>


</resources>