<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/expanse_prediction"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/title_expanse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/expense_text"
        android:layout_marginStart="8dp"
        android:text="@string/expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">
    </TextView>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title_expanse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <com.dokugo.ui.custom.CustomButtonDate
        android:id="@+id/bt_week"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:text="@string/date__1w"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/bt_month"
        app:layout_constraintTop_toBottomOf="@id/lineChart" />

    <com.dokugo.ui.custom.CustomButtonDate
        android:id="@+id/bt_month"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:text="@string/date__1m"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineChart" />

    <com.dokugo.ui.custom.CustomButtonDate
        android:id="@+id/bt_year"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:text="@string/date_1y"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineChart" />

    <com.dokugo.ui.custom.CustomButtonDate
        android:id="@+id/bt_all"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:text="@string/date_all"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/bt_year"
        app:layout_constraintTop_toBottomOf="@id/lineChart" />

</androidx.constraintlayout.widget.ConstraintLayout>
