<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/avatar1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/avatar1"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/avatar1"
        app:layout_constraintBottom_toTopOf="@id/avatar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/avatar2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/avatar2"
        android:contentDescription="@string/avatar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/avatar3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/avatar3"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/avatar3"
        app:layout_constraintTop_toBottomOf="@id/avatar2" 
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>