<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/all_detail_expense"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/detail_expense_field"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:src="@drawable/detail_expense_field"
        android:contentDescription="@string/expense"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/icon_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_monetization_on_24"
        android:contentDescription="@string/expense"
        app:layout_constraintStart_toStartOf="@id/detail_expense_field"
        app:layout_constraintTop_toTopOf="@id/detail_expense_field"
        app:layout_constraintBottom_toBottomOf="@id/detail_expense_field"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/expense_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_money"
        app:layout_constraintTop_toTopOf="@id/detail_expense_field" />

    <TextView
        android:id="@+id/expense_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@id/icon_money"
        app:layout_constraintTop_toTopOf="@id/detail_expense_field" />

    <TextView
        android:id="@+id/expense_ket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_money"
        app:layout_constraintTop_toBottomOf="@id/expense_date" />

    <TextView
        android:id="@+id/detail_expense_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@id/detail_expense_field"
        app:layout_constraintTop_toTopOf="@id/detail_expense_field"
        app:layout_constraintBottom_toBottomOf="@id/detail_expense_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>