<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        tools:context=".login.signin.SignInActivity">

        <ImageView
            android:id="@+id/icon"
            android:alpha="0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:translationY="700dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_signin"
            android:translationY="700dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/emailComponent" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            android:translationY="700dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/tv_signin"
            app:layout_constraintStart_toStartOf="@id/emailComponent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailComponent"
            android:translationY="700dp"
            android:layout_width="320dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/f_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:translationY="700dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/passwordComponent"
            app:layout_constraintStart_toStartOf="@id/passwordComponent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordComponent"
            android:translationY="700dp"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/emailComponent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/f_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPass"
            android:translationY="500dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textSize="16sp"
            style="@style/clickableText"
            app:layout_constraintTop_toBottomOf="@+id/passwordComponent"
            app:layout_constraintStart_toStartOf="@id/tv_signin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_signin"
            android:alpha="0"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textColor="@color/black"
            style="@style/slightdarkbutton"
            app:backgroundTint="@color/slightdarkbutton"
            android:background="@drawable/button_border"
            app:layout_constraintTop_toBottomOf="@id/forgetPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:alpha="0"
            android:id="@+id/lineWithText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/bt_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textColor="#000000"
                android:textSize="12sp"
                android:padding="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <ImageView
            android:id="@+id/apple"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_apple"
            android:contentDescription="@string/apple_icon"
            app:layout_constraintTop_toBottomOf="@id/lineWithText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageView>

        <ImageView
            android:id="@+id/google"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_google"
            android:contentDescription="@string/google_icon"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/lineWithText"
            app:layout_constraintEnd_toStartOf="@id/apple">
        </ImageView>

        <ImageView
            android:id="@+id/facebook"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_facebook"
            android:contentDescription="@string/facebook_icon"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/lineWithText"
            app:layout_constraintStart_toEndOf="@id/apple">
        </ImageView>

        <TextView
            android:id="@+id/noacc"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/google"
            app:layout_constraintStart_toStartOf="@id/google">
        </TextView>

        <TextView
            android:id="@+id/tv_signup"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            style="@style/clickableText"
            app:layout_constraintTop_toBottomOf="@id/facebook"
            app:layout_constraintStart_toEndOf="@+id/noacc">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>